Use first line in ysed file as yaml template

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,9 +13,8 @@
             ],
             "program": "${workspaceFolder}/index.js",
             "args": [
-                "test/test.yaml",
-                "env[VAR1]=new_val2",
-                "config[test/updates.ysed]"
+                "test/updates.ysed",
+                "env[VAR1]=new_val2"
             ]
         }
     ]
